test/ui/test/parsing/plain-pi-as-argument.lushui
main = function (A: Type) -> Type
